// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreCard renders correctly 1`] = `
<div
  class="ext-growthExperiments-ScoreCard"
>
  <div
    class="ext-growthExperiments-ScoreCard__data-display"
  >
    <span
      class="cdx-icon cdx-icon--medium ext-growthExperiments-ScoreCard__data-display__icon"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          some icon label
        </title>
        <g>
          some icon
        </g>
      </svg>
    </span>
    
    123
    
  </div>
  <div
    class="ext-growthExperiments-ScoreCard__label"
  >
    <span
      class="ext-growthExperiments-CText ext-growthExperiments-CText--color-subtle ext-growthExperiments-ScoreCard__label__text"
    >
      
      some label
      
    </span>
    <!--v-if-->
  </div>
</div>
`;

exports[`ScoreCard renders correctly info slot 1`] = `
<div
  class="ext-growthExperiments-ScoreCard"
>
  <div
    class="ext-growthExperiments-ScoreCard__data-display"
  >
    <span
      class="cdx-icon cdx-icon--medium ext-growthExperiments-ScoreCard__data-display__icon"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          some icon label
        </title>
        <g>
          some icon
        </g>
      </svg>
    </span>
    
    123
    
  </div>
  <div
    class="ext-growthExperiments-ScoreCard__label ext-growthExperiments-ScoreCard__label--with-info"
  >
    <span
      class="ext-growthExperiments-CText ext-growthExperiments-CText--color-subtle ext-growthExperiments-ScoreCard__label__text"
    >
      
      some label
      
    </span>
    <span>
      <button
        aria-label="the label for the info icon"
        aria-pressed="false"
        class="cdx-toggle-button cdx-toggle-button--quiet cdx-toggle-button--toggled-off cdx-toggle-button--icon-only ext-growthExperiments-ScoreCards__info-button"
        type="button"
      >
        
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <path
              d=""
            />
          </svg>
        </span>
        
      </button>
      <!--
					CdxPopover uses the floating-ui library in a way that causes infinite recursion when
					mounted in JSDOM. Shallow rendering the component in turn fails if an anchor reference
					is provided, because vue-test-utils is unable to stringify the HTML element held within
					the ref. Work around the situation by using shallow rendering in tests and use a well-known
					window name to avoid passing the anchor in this case.
				-->
      <!--teleport start-->
      <!--v-if-->
      <!--teleport end-->
    </span>
  </div>
</div>
`;
